--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.6",
-    "expo-font": "~11.1.1",
-    "expo-splash-screen": "^0.18.1",
+    "expo": "47.0.0",
+    "expo-font": "~11.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react": "18.1.0",
+    "react-native": "0.70.5",
+    "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
+  },
+  "overrides": {
+    "react-devtools-core": "~4.25.0"
   },
   "private": true,
   "repository": {
