--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.3",
     "expo": "47.0.13",
     "expo-camera": "~13.1.0",
     "expo-font": "~11.0.1",
@@ -20,12 +21,15 @@
     "expo-media-library": "~15.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.18.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "redux-devtools-extension": "^2.13.9"
+    "react-redux": "^8.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "expo-image-picker": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
