--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "~3.18.0",
     "react-redux": "^8.0.5",
     "redux-devtools-extension": "^2.13.9",
-    "expo-image-picker": "~14.0.2"
+    "expo-image-picker": "~14.0.2",
+    "expo-updates": "~0.15.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
